# llm-consensus-py

./: .env.example  .gitignore  CLAUDE_CONSENSUS_GUIDE.md  LICENSE  README.md  pyproject.toml
src/llm_consensus/: __init__.py  agents.py  demo.py  graph.py  preferences.py  server.py  state.py  user_reviewer.py
src/llm_consensus/dashboard/: index.html
src/llm_consensus/nodes/: __init__.py  aggregate.py  debate.py  decide.py  dispatch.py  refine.py
src/llm_consensus/policy/: bandit.py
tests/: conftest.py  test_bandit.py  test_graph.py  test_nodes.py
