[project]
name = "llm-consensus"
version = "0.1.0"
description = "Multi-LLM consensus orchestrated with LangGraph, weighted by a UCB1 bandit and a user-preference agent."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["llm", "langgraph", "consensus", "claude", "openai", "grok", "bandit"]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
llm-consensus = "llm_consensus:main"
llm-consensus-demo = "llm_consensus.demo:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]
